add alt text to image

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   </style>
 </head>
 <body class="m-0 h-screen flex flex-col items-center justify-center font-sans bg-customLightGray">
-  <div class="w-80 bg-white p-5 rounded-3xl drop-shadow-2xl">
-    <img src="./images/image-qr-code.png" class="'w-100 rounded-xl"/>
+  <main role="main" class="w-80 bg-white p-5 rounded-3xl drop-shadow-2xl">
+    <img alt="QR Code" src="./images/image-qr-code.png" class="'w-100 rounded-xl"/>
     <h1 class="text-xl px-2 my-4 font-bold text-center text-primary text-customDarkBlue">Improve your front-end skills by building projects</h1>
     <p class="text-center px-2 text-p text-secondary text-customGrayishBlue">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
+  </main>
 
-  <div class="attribution">
+  <footer role="contentinfo" class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/vyonizr" target="_blank">vyonizr</a>.
-  </div>
+  </footer>
 </body>
 </html>
